--- a/src/Project/Hackathon/Hackathon.Website/packages.config
+++ b/src/Project/Hackathon/Hackathon.Website/packages.config
@@ -1,10 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Google.Apis" version="1.32.2" targetFramework="net462" />
+  <package id="Google.Apis.Auth" version="1.32.2" targetFramework="net462" />
+  <package id="Google.Apis.Auth.Mvc" version="1.32.2" targetFramework="net462" />
+  <package id="Google.Apis.Core" version="1.32.2" targetFramework="net462" />
+  <package id="Google.Apis.YouTubeAnalytics.v1" version="1.32.2.1153" targetFramework="net462" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net462" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net462" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net462" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net462" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net462" />
   <package id="Sitecore.Kernel.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
   <package id="Sitecore.Mvc.Analytics.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
   <package id="Sitecore.Mvc.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net462" />
+  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
 </packages>
