--- a/src/Project/Hackathon/Hackathon.Website/Hackathon.Website.csproj
+++ b/src/Project/Hackathon/Hackathon.Website/Hackathon.Website.csproj
@@ -43,10 +43,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="App_Config\Include\website.pipelines.config" />
-    <Content Include="Views\Website\Layouts\Layout.cshtml" />
-    <Content Include="Views\Website\web.config" />
-    <None Include="packages.config" />
-    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <Content Include="Web.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -59,7 +55,6 @@
     <Compile Include="Controllers\AuthCallbackController.cs" />
     <Compile Include="Controllers\YoutubeController.cs" />
     <Compile Include="Pipelines\Initialize\InitializeRoutes.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AppFlowMetadata.cs" />
     <Compile Include="Services\CustomDataStore.cs" />
   </ItemGroup>
@@ -174,6 +169,9 @@
     <Content Include="res\styles\bootstrap.css.map" />
     <Content Include="res\styles\bootstrap.min.css.map" />
     <Content Include="Views\Website\Renderings\Header.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
