--- a/src/Feature/Hackathon.Accounts/Hackathon.Accounts.csproj
+++ b/src/Feature/Hackathon.Accounts/Hackathon.Accounts.csproj
@@ -119,6 +119,7 @@
     <Content Include="App_Config\Include\zzz\Hackathon.config" />
     <Content Include="Views\Renderings\Account\Login.cshtml" />
     <Content Include="Views\Renderings\Account\Registration.cshtml" />
+    <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="Views\web.config" />
     <None Include="packages.config" />
     <None Include="web.config" />
