--- a/src/Project/Hackathon/Hackathon.Website/Hackathon.Website.csproj
+++ b/src/Project/Hackathon/Hackathon.Website/Hackathon.Website.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Content Include="App_Config\Include\website.pipelines.config" />
     <Content Include="Web.config" />
+    <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -163,7 +164,6 @@
     <Content Include="Views\Website\Layouts\Layout.cshtml" />
     <Content Include="Views\Website\web.config" />
     <None Include="packages.config" />
-    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <Content Include="res\styles\bootstrap-theme.css.map" />
     <Content Include="res\styles\bootstrap-theme.min.css.map" />
     <Content Include="res\styles\bootstrap.css.map" />
